@@ -74,6 +74,8 @@ typedef struct collocation_info_struct
     int filter_area_intersects;
     int filter_point_in_area_xy;
     int filter_point_in_area_yx;
+    const char *ingest_options_a;
+    const char *ingest_options_b;
 
     int perform_nearest_neighbour_x_first;
     char *nearest_neighbour_x_variable_name;
@@ -351,6 +353,8 @@ static int collocation_info_new(collocation_info **new_info)
     info->filter_area_intersects = 0;
     info->filter_point_in_area_xy = 0;
     info->filter_point_in_area_yx = 0;
+    info->ingest_options_a = NULL;
+    info->ingest_options_b = NULL;
     info->perform_nearest_neighbour_x_first = 0;
     info->nearest_neighbour_x_variable_name = NULL;
     info->nearest_neighbour_x_criterium_index = -1;
@@ -1335,7 +1339,8 @@ static int perform_matchup(collocation_info *info)
         double datetime_stop_a = info->dataset_a->metadata[index_a]->datetime_stop;
 
         /* import product of dataset A */
-        if (harp_import(info->dataset_a->metadata[index_a]->filename, NULL, NULL, &info->product_a) != 0)
+        if (harp_import(info->dataset_a->metadata[index_a]->filename, NULL, info->ingest_options_a, &info->product_a) !=
+            0)
         {
             return -1;
         }
@@ -1365,8 +1370,8 @@ static int perform_matchup(collocation_info *info)
                 /* overlap */
                 if (info->product_b[index_b] == NULL)
                 {
-                    if (harp_import(info->dataset_b->metadata[index_b]->filename, NULL, NULL, &info->product_b[index_b])
-                        != 0)
+                    if (harp_import(info->dataset_b->metadata[index_b]->filename, NULL, info->ingest_options_b,
+                                    &info->product_b[index_b]) != 0)
                     {
                         return -1;
                     }
@@ -1478,6 +1483,18 @@ int matchup(int argc, char *argv[])
             }
             i++;
         }
+        else if ((strcmp(argv[i], "-oa") == 0 || strcmp(argv[i], "--options_a") == 0) && i + 1 < argc
+                 && argv[i + 1][0] != '-')
+        {
+            info->ingest_options_a = argv[i + 1];
+            i++;
+        }
+        else if ((strcmp(argv[i], "-ob") == 0 || strcmp(argv[i], "--options_b") == 0) && i + 1 < argc
+                 && argv[i + 1][0] != '-')
+        {
+            info->ingest_options_b = argv[i + 1];
+            i++;
+        }
         else
         {
             if (argv[i][0] == '-' || i != argc - 3)
@@ -1489,12 +1506,12 @@ int matchup(int argc, char *argv[])
         }
     }
 
-    if (harp_dataset_import(info->dataset_a, argv[argc - 3], NULL) != 0)
+    if (harp_dataset_import(info->dataset_a, argv[argc - 3], info->ingest_options_a) != 0)
     {
         collocation_info_delete(info);
         return -1;
     }
-    if (harp_dataset_import(info->dataset_b, argv[argc - 2], NULL) != 0)
+    if (harp_dataset_import(info->dataset_b, argv[argc - 2], info->ingest_options_b) != 0)
     {
         collocation_info_delete(info);
         return -1;
