@@ -98,6 +98,16 @@ static void print_help(void)
     printf("            -ny <diffvariable>\n");
     printf("                Filter collocation pairs such that for each sample from\n");
     printf("                dataset B only the neareset sample from dataset A is kept.\n");
+    printf("            -oa, --options_a <option list>\n");
+    printf("                List of options to pass to the ingestion module for ingesting\n");
+    printf("                products from the first dataset.\n");
+    printf("                Only applicable if the input product is not in HARP format.\n");
+    printf("                Options are separated by semi-colons. Each option consists\n");
+    printf("                of an <option name>=<value> pair. An option list needs to be\n");
+    printf("                provided as a single expression.\n");
+    printf("            -ob, --options_b <option list>\n");
+    printf("                List of options to pass to the ingestion module for ingesting\n");
+    printf("                products from the second dataset (see above).\n");
     printf("        The order in which -nx and -ny are provided determines the order in\n");
     printf("        which the nearest filters are executed.\n");
     printf("        When '[unit]' is not specified, the unit of the variable of the\n");
